--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,18 @@
+name: simple_flutterapp
+description: A simple Flutter application to make HTTP requests.
+
+publish_to: 'none'  # Remove this line if you want to publish to pub.dev
+
+version: 1.0.0+1
+
+environment:
+  sdk: '>=2.19.0 &lt;3.0.0'
+
 dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.4
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
