--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'  # Remove this line if you want to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0 &lt;3.0.0'
+  sdk: '>=2.19.0 <3.0.0'
 
 dependencies:
   flutter:
