--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,8 @@
+def flutterVersionName = '1.0.0'
+def flutterVersionCode = 1
+
+apply plugin: 'com.android.application'
+
 android {
     compileSdkVersion 33
 
@@ -5,13 +10,20 @@ android {
         applicationId "com.example.http_request_app"
         minSdkVersion 21
         targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
+        versionCode flutterVersionCode
+        versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
         release {
-            signingConfig signingConfigs.debug
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+dependencies {
+    implementation 'com.google.guava:guava:30.1.1-android'
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
