--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,113 +1,35 @@
-name: Build Flutter APK
+name: Flutter CI
 
 on:
   push:
-    branches:
-      - main  # You can change this to the branch you want to trigger the workflow
+    branches: [main]
   pull_request:
-    branches:
-      - main  # You can change this to the branch you want to trigger the workflow
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.7.1'  # Specify the Flutter version you want to use
-
-    - name: Create new Flutter project
-      run: flutter create -t app new_flutterapp
-
-    - name: Copy lib directory if it exists
-      run: |
-        if [ -d "lib" ]; then
-          cp -r lib new_flutterapp/lib
-        else
-          echo "lib directory not found, skipping copy."
-        fi
-
-    - name: Copy assets directory if it exists
-      run: |
-        if [ -d "assets" ]; then
-          cp -r assets new_flutterapp/assets
-        else
-          echo "assets directory not found, skipping copy."
-        fi
-
-    - name: Copy pubspec.yaml
-      run: cp pubspec.yaml new_flutterapp/pubspec.yaml
-
-    - name: Copy Android resources if they exist
-      run: |
-        if [ -d "android/app/src/main/res" ]; then
-          cp -r android/app/src/main/res new_flutterapp/android/app/src/main/res
-        else
-          echo "android/app/src/main/res directory not found, skipping copy."
-        fi
-
-    - name: Copy iOS assets if they exist
-      run: |
-        if [ -d "ios/Runner/Assets.xcassets" ]; then
-          cp -r ios/Runner/Assets.xcassets new_flutterapp/ios/Runner/Assets.xcassets
-        else
-          echo "ios/Runner/Assets.xcassets directory not found, skipping copy."
-        fi
-
-    - name: Copy other necessary files and directories
-      run: |
-        if [ -d "android/app/src/main/java" ]; then
-          cp -r android/app/src/main/java new_flutterapp/android/app/src/main/java
-        else
-          echo "android/app/src/main/java directory not found, skipping copy."
-        fi
-
-        if [ -d "ios/Runner" ]; then
-          cp -r ios/Runner new_flutterapp/ios/Runner
-        else
-          echo "ios/Runner directory not found, skipping copy."
-        fi
-
-        if [ -f "android/app/build.gradle" ]; then
-          cp android/app/build.gradle new_flutterapp/android/app/build.gradle
-        else
-          echo "android/app/build.gradle file not found, skipping copy."
-        fi
-
-        if [ -f "android/build.gradle" ]; then
-          cp android/build.gradle new_flutterapp/android/build.gradle
-        else
-          echo "android/build.gradle file not found, skipping copy."
-        fi
-
-        if [ -f "android/settings.gradle" ]; then
-          cp android/settings.gradle new_flutterapp/android/settings.gradle
-        else
-          echo "android/settings.gradle file not found, skipping copy."
-        fi
-
-    - name: Navigate to new project directory
-      run: cd new_flutterapp
+        flutter-version: '3.13.0' # Set the Flutter version you are using
 
     - name: Install dependencies
       run: flutter pub get
-      working-directory: new_flutterapp
 
-    - name: Migrate to Android embedding v2
-      run: flutter create --platforms=android .
-      working-directory: new_flutterapp
+    - name: Run tests
+      run: flutter test
 
     - name: Build APK
-      run: flutter build apk --debug  # Use --release for release builds
-      working-directory: new_flutterapp
+      run: flutter build apk --release
 
-    - name: Upload APK
+    - name: Upload APK artifact
       uses: actions/upload-artifact@v3
       with:
-        name: app-debug.apk
-        path: new_flutterapp/build/app/outputs/flutter-apk/app-debug.apk
+        name: app-release.apk
+        path: build/app/outputs/flutter-apk/app-release.apk
