--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -15,9 +15,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up Flutter
-      uses: subosito/flutter-action@v2
+      uses: subosito/flutter-action@v2.16.0
       with:
-        flutter-version: '3.13.0'  # Specify your Flutter version
+        flutter-version: '3.13.0'
 
     - name: List contents of the repository
       run: |
