--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -14,6 +14,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Set Up Java
+      uses: actions/setup-java@v3.12.0
+      with:
+        distribution: 'oracle'
+        java-version: '17'
+
     - name: Set up Flutter
       uses: subosito/flutter-action@v2.16.0
       with:
