--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,4 +1,4 @@
-name: Flutter CI - Auto Migration
+name: Flutter CI - HTTP Request App
 
 on:
   push:
@@ -14,32 +14,148 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set Up Java
-      uses: actions/setup-java@v3.12.0
-      with:
-        distribution: 'oracle'
-        java-version: '17'
-
     - name: Set up Flutter
-      uses: subosito/flutter-action@v2.16.0
+      uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.24.0'
+        flutter-version: '3.13.0' # Specify your Flutter version
 
-    - name: List contents of the repository
+    - name: Create a New Flutter Project
       run: |
-        echo "Current directory contents:"
-        ls -la
+        echo "Creating a new Flutter project with Android V2 embedding..."
+        flutter create -t app new_project
+        cp -r lib/ new_project/lib/
+        cp pubspec.yaml new_project/
+        if [ -d assets ]; then cp -r assets new_project/assets; fi
 
-    - name: Install dependencies
+    - name: Copy Custom Main File
+      run: |
+        echo "Replacing default main.dart with custom HTTP request code..."
+        cat > new_project/lib/main.dart <<- EOM
+        import 'package:flutter/material.dart';
+        import 'package:http/http.dart' as http;
+        import 'dart:convert';
+
+        void main() {
+          runApp(MyApp());
+        }
+
+        class MyApp extends StatelessWidget {
+          @override
+          Widget build(BuildContext context) {
+            return MaterialApp(
+              title: 'HTTP Request App',
+              theme: ThemeData(
+                primarySwatch: Colors.purple,
+              ),
+              home: HttpRequestPage(),
+            );
+          }
+        }
+
+        class HttpRequestPage extends StatefulWidget {
+          @override
+          _HttpRequestPageState createState() => _HttpRequestPageState();
+        }
+
+        class _HttpRequestPageState extends State<HttpRequestPage> {
+          final TextEditingController _urlController = TextEditingController();
+          String _response = '';
+
+          Future<void> _makeRequest(String method) async {
+            try {
+              final url = Uri.parse(_urlController.text);
+              http.Response response;
+
+              switch (method) {
+                case 'GET':
+                  response = await http.get(url);
+                  break;
+                case 'POST':
+                  response = await http.post(url, body: {'key': 'value'});
+                  break;
+                case 'PUT':
+                  response = await http.put(url, body: {'key': 'updated value'});
+                  break;
+                case 'DELETE':
+                  response = await http.delete(url);
+                  break;
+                default:
+                  throw 'Unsupported HTTP method';
+              }
+
+              setState(() {
+                _response = 'Status Code: \${response.statusCode}\\n\\nBody:\\n\${response.body}';
+              });
+            } catch (e) {
+              setState(() {
+                _response = 'Error: \$e';
+              });
+            }
+          }
+
+          @override
+          Widget build(BuildContext context) {
+            return Scaffold(
+              appBar: AppBar(
+                title: Text('HTTP Request App'),
+              ),
+              body: Padding(
+                padding: const EdgeInsets.all(16.0),
+                child: Column(
+                  children: [
+                    TextField(
+                      controller: _urlController,
+                      decoration: InputDecoration(
+                        labelText: 'Enter URL',
+                        border: OutlineInputBorder(),
+                      ),
+                    ),
+                    SizedBox(height: 16),
+                    Row(
+                      mainAxisAlignment: MainAxisAlignment.spaceEvenly,
+                      children: [
+                        ElevatedButton(
+                          onPressed: () => _makeRequest('GET'),
+                          child: Text('GET'),
+                        ),
+                        ElevatedButton(
+                          onPressed: () => _makeRequest('POST'),
+                          child: Text('POST'),
+                        ),
+                        ElevatedButton(
+                          onPressed: () => _makeRequest('PUT'),
+                          child: Text('PUT'),
+                        ),
+                        ElevatedButton(
+                          onPressed: () => _makeRequest('DELETE'),
+                          child: Text('DELETE'),
+                        ),
+                      ],
+                    ),
+                    SizedBox(height: 16),
+                    Expanded(
+                      child: SingleChildScrollView(
+                        child: Text(
+                          _response,
+                          style: TextStyle(fontSize: 16),
+                        ),
+                      ),
+                    ),
+                  ],
+                ),
+              ),
+            );
+          }
+        }
+        EOM
+
+    - name: Install dependencies in New Project
+      working-directory: new_project
       run: flutter pub get
 
     - name: Build APK
-      run: flutter build apk --debug
-
-    - name: List contents of build directory
-      run: |
-        echo "Build directory contents:"
-        ls -la build/app/outputs/flutter-apk
+      working-directory: new_project
+      run: flutter build apk --release
 
     - name: Upload APK artifact
       uses: actions/upload-artifact@v3
